--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>com.testing</groupId>
 	<artifactId>spring-boot-hello-world</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>spring-boot-hello-world</name>
 	<description>Spring Boot Hello World</description>
